--- a/Tools-Supplies/src/vista/FrmMenu.form
+++ b/Tools-Supplies/src/vista/FrmMenu.form
@@ -40,7 +40,7 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Pruducto"/>
+            <Property name="text" type="java.lang.String" value="Producto"/>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="18" style="1"/>
             </Property>
